<?xml version="1.0" encoding="utf-8"?>
<!--<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
<!--    xmlns:tools="http://schemas.android.com/tools"-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="match_parent">-->

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:cardElevation="4dp"
    app:cardCornerRadius="8dp"
    android:layout_marginHorizontal="16dp"
    android:layout_marginVertical="8dp">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="6dp">

        <ImageView
            android:id="@+id/idIVCourseImage"
            android:layout_width="70dp"
            android:layout_height="80dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/app_name"
            android:padding="5dp"
            android:src="@drawable/ic_schedule_send_green" />

        <!--Text View to display Course Name-->
        <TextView
            android:id="@+id/job_name_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="10dp"
            android:layout_toEndOf="@id/idIVCourseImage"
            android:text=""
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/job_url_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/job_name_textview"
            android:layout_toEndOf="@id/idIVCourseImage"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="2dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/job_method_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="" />

            <TextView
                android:id="@+id/job_url_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="2dp"
                android:singleLine="true"
                android:text="" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/job_interval_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/job_url_wrapper"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="10dp"
            android:layout_toEndOf="@id/idIVCourseImage"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/job_interval_prompt2" />

            <TextView
                android:id="@+id/job_interval_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="2dp"
                android:text="" />

            <TextView
                android:id="@+id/job_time_unit_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="2dp"
                android:text="" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/job_next_run_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/job_interval_wrapper"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="6dp"
            android:layout_toEndOf="@id/idIVCourseImage"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2dp"
                android:text="@string/next_run_at_prompt" />

            <TextView
                android:id="@+id/job_next_run_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="2dp"
                android:text="" />
        </LinearLayout>
    </RelativeLayout>
</androidx.cardview.widget.CardView>
    <!--</androidx.constraintlayout.widget.ConstraintLayout>-->